--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 .env/
 .vscode/
  env/lib/python3.6/site-packages/bootstrap4/__pycache__/
+
+        awards/__pycache__/__init__.cpython-37.pyc
+        awards/__pycache__/admin.cpython-37.pyc
+        awards/__pycache__/apps.cpython-37.pyc
+        awards/__pycache__/forms.cpython-37.pyc
+        awards/__pycache__/models.cpython-37.pyc
+        awards/__pycache__/serializer.cpython-37.pyc
+        awards/__pycache__/urls.cpython-37.pyc
+        awards/__pycache__/views.cpython-37.pyc
+        awards/migrations/__pycache__/0001_initial.cpython-37.pyc
+        awards/migrations/__pycache__/0002_project.cpython-37.pyc
+        awards/migrations/__pycache__/__init__.cpython-37.pyc
+        awardsapp/__pycache__/__init__.cpython-37.pyc
+        awardsapp/__pycache__/settings.cpython-37.pyc
+        awardsapp/__pycache__/urls.cpython-37.pyc
+        awardsapp/__pycache__/wsgi.cpython-37.pyc
