--- a/requirements.txt
+++ b/requirements.txt
@@ -3,23 +3,18 @@ beautifulsoup4==4.9.1
 bootstrap4==0.1.0
 certifi==2020.6.20
 chardet==3.0.4
-confusable-homoglyphs==3.2.0
+dj-database-url==0.5.0
 Django==3.1
 django-bootstrap4==2.2.0
 django-braces==1.14.0
-django-extensions==3.0.5
-django-filter==2.3.0
 django-model-utils==4.0.0
-django-rating==0.1.5
-django-registration==3.1
 django-registration-redux==2.8
 django-star-ratings==0.9.1
+django-tinymce==3.0.2
 djangorestframework==3.11.1
 idna==2.10
 importlib-metadata==1.7.0
-Markdown==3.2.2
 Pillow==7.2.0
-pkg-resources==0.0.0
 psycopg2-binary==2.8.5
 python-dateutil==2.8.1
 pytz==2020.1
@@ -30,4 +25,5 @@ soupsieve==2.0.1
 sqlparse==0.3.1
 swapper==1.1.2.post1
 urllib3==1.25.10
+whitenoise==5.2.0
 zipp==3.1.0
